src/objects/BMCServiceDesk__SYSTemplate__c.object
<CustomObject>
    <description>This object allows you to store data for templates.</description>
    <fields>
        <fullName>BMCServiceDesk__Export__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used internally to control trigger action configured for exporting Template from RF Template Migration package.</description>
        <inlineHelpText>Select this field to allow the record to be exported from the RF Template Migration Pentaho package.</inlineHelpText>
        <label>Tag for Export</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKContentImport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field forms a relationship between the Content Import object and the records imported in the Base Element, Request Definition, Template, Category, and Agreement objects. This field helps in tracking the imported record in the respective objects.</description>
        <label>Content Import</label>
        <referenceTo>BMCServiceDesk__ContentImport__c</referenceTo>
        <relationshipLabel>Templates</relationshipLabel>
        <relationshipName>Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__HasRecurrence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Ignore_Execution_Order__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Ignore Execution Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RecurrenceDayOfMonth__c</fullName>
        <label>Recurrence Day Of Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RecurrenceDayOfWeekMask__c</fullName>
        <label>Recurrence Day Of Week</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RecurrenceEndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RecurrenceHour__c</fullName>
        <label>Recurrence Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RecurrenceInstance__c</fullName>
        <label>Recurrence Instance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RecurrenceInterval__c</fullName>
        <label>Recurrence Interval</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RecurrenceMinutes__c</fullName>
        <label>Recurrence Minutes</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RecurrenceMonthOfYear__c</fullName>
        <label>Recurrence Month Of Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RecurrenceStartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Recurrence_Type__c</fullName>
        <label>Recurrence Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>EveryWeekday</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>MonthlyNth</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>YearlyNth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Recurrence__c</fullName>
        <defaultValue>$Label.bmcservicedesk__none</defaultValue>
        <label>Recurrence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SelfService_Display_Order__c</fullName>
        <label>SelfService Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Sequence__c</fullName>
        <externalId>true</externalId>
        <label>Sequence Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__UnderReview__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not selected by default. When the field is not selected, the imported records (records imported by using the Content Management tile) can be accessed by the system administrator only. The value of the field is set to True when the imported records are deployed to be accessed by users.</description>
        <label>Under Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__allProfile__c</fullName>
        <defaultValue>true</defaultValue>
        <label>All Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__description__c</fullName>
        <inlineHelpText>Use this field to enter the description for the template.For example, you can create a template to define the New Hire process which automatically creates tasks associated with the incident template for the new employee.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if the template record is no longer valid, but the record has to be retained for compliance with the records retention policy.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__keywords__c</fullName>
        <description>Use this field to enter keywords</description>
        <inlineHelpText>Enter keywords (separated by semicolon) that will help in suggesting templates for a record.</inlineHelpText>
        <label>Keywords</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__orderNumber__c</fullName>
        <label>Order Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__systemTemplate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>System templates can be applied on a record using workflows or triggers only. These templates are not available for selection in the Template lookup window in the Salesforce page layouts.</inlineHelpText>
        <label>System Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__templateFor__c</fullName>
        <inlineHelpText>From the list of options, select the type of template you are creating. You can create a template for an incident, task ,change request ,release or request detail.</inlineHelpText>
        <label>Template For</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Change Request</fullName>
                </value>
                <value>
                    <fullName>Incident</fullName>
                </value>
                <value>
                    <fullName>Release</fullName>
                </value>
                <value>
                    <fullName>Request Detail</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Template</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BMCServiceDesk__TemplateName</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISNULL(Name) , ISBLANK( Name))</errorConditionFormula>
        <errorMessage>Please enter Template Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__templateForRequired</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISNULL( TEXT(BMCServiceDesk__templateFor__c) ) , ISBLANK(TEXT(BMCServiceDesk__templateFor__c)))</errorConditionFormula>
        <errorMessage>Please select Template For.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__templateNameUniqueValidation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISNEW(),
NOT(ISBLANK(VLOOKUP( $ObjectType.BMCServiceDesk__SYSTemplate__c.Fields.Name , $ObjectType.BMCServiceDesk__SYSTemplate__c.Fields.Name,NULLVALUE(Name, Name) ))),
IF(ISCHANGED(Name),
IF((Name) = (VLOOKUP($ObjectType.BMCServiceDesk__SYSTemplate__c.Fields.Name , $ObjectType.BMCServiceDesk__SYSTemplate__c.Fields.Name,Name)), TRUE, FALSE),
FALSE))</errorConditionFormula>
        <errorMessage>Duplicate Name</errorMessage>
    </validationRules>
</CustomObject>